--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: RiHui-Song's Blog
 subtitle:
-description: Never let it rest, until your good is better and you better is best.
+description: Never let it rest, until your good is better and your better is best.
 author: RiHui-Song
 email: song_rihui@qq.com
 language: zh-Hans
